--- a/favorite.html
+++ b/favorite.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" , initial-scale="1.0">
     <link rel="stylesheet" href="favorite.css">
-    <title>My Favorite Things</title>
+    <title>Email Template</title>
 
 </head>
 
@@ -16,28 +16,28 @@
     <div class="navbar flex-layout">
         navbar
     </div>
-    <h1>These are a few of my favorite things</h1>
+    <h1>Compose</h1>
     <div class="one">
-        <h2> My favorite Foods</h2>
+        <h2> Compose </h2>
         <ol>
-            <li>Empanadas</li>
-            <li>Pastel de Choclo</li>
-            <li>Chineese Food</li>
+        
         </ol>
     </div>
     <div class="two">
-        <h2>My favorite music</h2>
+        <h2>Search</h2>
         <ol>
-            <li>Tin Pan Alley</li>
-            <li>Electronica</li>
-            <li>Folklore</li>
+            <li><div class="container">
+                email 1
+            </div></li>
+            <li>email 2</li>
+            <li>email 3</li>
         </ol>
     </div>
 
     <div class="three">
-        <h2>My favorite Images</h2>
-        <img class="picone1" src="assets/shutterstock_521564758-e1582606137443.jpg">
-        <img class="picone2" src="assets/steak-sandwich.jpg">
+        <h2></h2>
+        <img class="picone1" src="">
+        <img class="picone2" src="">
     </div>
     <div id="new">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio nulla, amet quasi eos voluptas vitae
